--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,11 @@
+#startmenu {
+	position:absolute;
+}
+
 div.gamearea {
 	width: 360px;
 	height: 100%;
-		margin: auto;
+	margin: auto;
 }
 
 div.game {
@@ -19,26 +23,43 @@ h2.attack {
 
 div.hibutton {
 	height: 100px;
-	width: 170px;
-	padding-left: auto;
-	padding-right: auto;
-	border: dotted;
-	float:right;
-	margin-top:8px;
-	text-align:center;
-font-size: 40px;
-}
-
-div.lobutton {
-		height: 100px;
-	width: 170px;
+	width: 90px;
 	padding-left: auto;
 	padding-right: auto;
 	border: dotted;
 	float:left;
 	margin-top:8px;
 	text-align:center;
+	font-size: 35px;
+}
+
+div.midbutton {
+	height: 100px;
+	width: 90px;
+	padding-left: auto;
+	padding-right: auto;
+	margin-left: auto;
+	margin-right: auto;
+	float:left;
+	border: dotted;
+	margin-top:8px;
+	margin-right: 33px;
+	text-align:center;
 	font-size: 40px;
+}
+
+div.lobutton {
+    height: 100px;
+	width: 90px;
+	padding-left: auto;
+	padding-right: auto;
+	border: dotted;
+	float:left;
+	margin-top:8px;
+	margin-right: 33px;
+	text-align:center;
+	font-size: 40px;
+
 }
 p {
 	color: blue;
